# axer-cli

./: .gitignore  CONTRIBUTING.md   Cargo.toml  LICENSE  README.md
docs/: README_ES.md
src/: generator.rs  main.rs  replacer.rs  template.rs  ui.rs
src/generator/: mod.rs  node.rs
src/generator/nodejs/: mod.rs  node.rs
templates/nest-api/: package-lock.json  package.json  template.toml
templates/nest-api/src/: prisma.service.ts
templates/nest-api/src/modules/init/: init.controller.ts  init.service.ts
templates/ts-starter/: package.json  template.toml
templates/ts-starter/src/: index.ts
